<resources>
    <string name="app_name">clara-android</string>
    <string name="home">Home</string>
    <string name="reservation">Reservation</string>
    <string name="profile">Profile</string>
    <string name="let_s_make_a_reservation">Lets make a reservation.</string>
    <string name="summary">Summary</string>
    <string name="waiting_for_approval">Waiting for Approval</string>
    <string name="on_reservation">On Reservation</string>
    <string name="returned">Returned</string>
    <string name="rejected">Rejected</string>
    <string name="active_reservation">Active Reservation</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_into_your_account">Sign in into your account!</string>
    <string name="password">Password</string>
    <string name="clara_logo">Clara logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_uppercase">SIGN IN</string>
    <string name="reservation_history">Reservation History</string>
    <string name="full_name">Full Name</string>
    <string name="nrp">NRP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="grade">Grade</string>
    <string name="results_could_not_be_loaded">Results could not be loaded</string>
    <string name="retry">Retry</string>
    <string name="no_results_found_for_this_query">No results found for this query</string>
    <string name="add_new_reservation">Add new reservation</string>
    <string name="asset">Asset</string>
    <string name="quantity">Quantity</string>
    <string name="begin_date">Begin Date</string>
    <string name="return_date">Return Date</string>
    <string name="description">Description</string>
    <string name="reserve">RESERVE</string>
    <string name="new_reservation">New Reservation</string>
    <string name="about_us">About us</string>
    <string name="description_clara">CLARA (College Asset Reservation Assistant) adalah aplikasi yang dapat
        memudahkan Anda dalam melakukan reservasi asset, mengetahui status asset,
        hingga  mendapatkan izin atau approval dari kampus Anda tanpa harus berinteraksi
        secara langsung dengan pihak yang terkait.</string>
    <string name="dev_team">Developer Team</string>
    <string name="sponsorship">Sponshorship</string>
    <string name="supported">Supported by</string>
    <string name="all_mentor">Umi Saadah \n Desy Intan Permatasari - Andhik Ampuh Yunanto - Maulidan Bagus Afridian Rasyid
        - Willy Achmat Fauzi - Verent Flourencia Irene - Mayshella Ainun Wakhidah - Andika Ahmad Ramadhan - Fandi Ahmad
        - Ardian Kristya Pratama - Angga Pradipta Kurnia Putra - Muhammad Alif Pradipta ADP - Rafly Arief Kanza
        - Ahmad Jarir At Thobari - Ajie Dibyo Respati - Achmad Zulkarnain - Arie Affianto - Tegar Imansyah</string>
    <string-array name="mentors">
        <item>Umi Saadah</item>
        <item>Desy Intan Permatasari</item>
        <item>Andhik Ampuh Yunanto</item>
        <item>Maulidan Bagus Afridian Rasyid</item>
        <item>Willy Achmat Fauzi</item>
        <item>Verent Flourencia Irene</item>
        <item>Mayshella Ainun Wakhidah</item>
        <item>Andika Ahmad Ramadhan</item>
        <item>Fandi Ahmad</item>
        <item>Ardian Kristya Pratama</item>
        <item>Angga Pradipta Kurnia Putra</item>
        <item>Muhammad Alif Pradipta ADP</item>
        <item>Rafly Arief Kanza</item>
        <item>Ahmad Jarir At Thobari</item>
        <item>Ajie Dibyo Respati</item>
        <item>Achmad Zulkarnain</item>
        <item>Arie Affianto</item>
        <item>Tegar Imansyah</item>
    </string-array>
</resources>