<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_page_item_menu"
        android:icon="@drawable/flaticon_home"
        android:enabled="true"
        android:title="@string/home" />

    <item
        android:id="@+id/reservation_page_item_menu"
        android:icon="@drawable/flaticon_reservation"
        android:enabled="true"
        android:title="@string/reservation" />

    <item
        android:id="@+id/asset_page_item_menu"
        android:icon="@drawable/flaticon_asset"
        android:enabled="true"
        android:title="@string/asset" />

    <item
        android:id="@+id/profile_page_item_menu"
        android:icon="@drawable/flaticon_profile"
        android:enabled="true"
        android:title="@string/profile" />

</menu>