<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signin_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.authentication.AuthActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_clara"
            android:layout_width="256dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/clara_logo"
            android:contentDescription="@string/clara_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signin_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimaryDark" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/letscreate_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_in_into_your_account"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimaryDark" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:hint="@string/email"
            app:boxBackgroundColor="?attr/colorPrimary"
            android:textColorHint="?attr/colorAccent"
            app:hintTextColor="?attr/colorAccent"
            app:boxStrokeColor="?attr/colorAccent"
            app:startIconDrawable="@drawable/e_mail"
            app:startIconTint="?attr/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="?attr/colorSecondary"
                android:textCursorDrawable="@drawable/cursor_color"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/password_input_layout"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:hint="@string/password"
            app:boxBackgroundColor="?attr/colorPrimary"
            android:textColorHint="?attr/colorAccent"
            app:hintTextColor="?attr/colorAccent"
            app:boxStrokeColor="?attr/colorAccent"
            app:startIconTint="?attr/colorAccent"
            app:startIconDrawable="@drawable/password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_input"
                android:inputType="textPassword"
                android:gravity="center_vertical"
                android:textColor="?attr/colorSecondary"
                android:textCursorDrawable="@drawable/cursor_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/signin_btn"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/sign_in_uppercase"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="?attr/colorPrimary"
            android:backgroundTint="?attr/colorPrimaryDark" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signup_tv"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                android:text="@string/dont_have_an_account"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/blue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_signup_page"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="3dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:text="@string/sign_up"
                android:focusable="true" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
