<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:orientation="vertical" >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:gravity="center_horizontal"
            android:text="@string/new_reservation"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary"
            android:textSize="26sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_rounded_box"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical" >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/asset_label_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/asset"
                    android:textColor="?attr/colorPrimaryDark" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/asset_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:backgroundTint="?attr/colorPrimary" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/quantity_label_tv"
                    android:labelFor="@+id/editTextNumberSigned"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/quantity"
                    android:textColor="?attr/colorPrimaryDark" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/quantity_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:inputType="number"
                    android:autofillHints="@string/quantity" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/beginDate_label_tv"
                    android:labelFor="@+id/begin_date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/begin_date"
                    android:textColor="?attr/colorPrimaryDark" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/begin_date_edit_text"
                    android:clickable="true"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:inputType="date"
                    android:autofillHints="@string/begin_date" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/returnDate_label_tv"
                    android:labelFor="@+id/return_date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/return_date"
                    android:textColor="?attr/colorPrimaryDark" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/return_date_edit_text"
                    android:clickable="true"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:inputType="date"
                    android:autofillHints="@string/return_date" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/description_label_tv"
                    android:labelFor="@+id/description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/description"
                    android:textColor="?attr/colorPrimaryDark" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLines="5"
                    android:autofillHints="@string/description" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/reserve_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:backgroundTint="?attr/colorPrimaryDark"
                    android:text="@string/reserve"
                    android:textAlignment="center"
                    android:textColor="?attr/colorPrimary" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>

