<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/colorPrimaryDark" >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textSize="26sp"
        android:textStyle="bold"
        tools:text="Title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white_rounded_box">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/list_searchview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:iconifiedByDefault="false"
            android:layoutDirection="rtl"
            android:queryHint="Search"
            android:theme="@style/AppSearchView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_recyclerview"
            tools:listitem="@layout/asset_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:layout_below="@+id/list_searchview"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/text_view_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/button_retry"
            android:layout_centerHorizontal="true"
            android:text="@string/results_could_not_be_loaded"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/retry"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/text_view_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_results_found_for_this_query"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_float_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:src="@drawable/ic_baseline_add_24"
            app:tint="?attr/colorPrimary"
            app:fabSize="normal"
            app:borderWidth="0dp"
            app:elevation="6dp"
            android:backgroundTint="?attr/colorPrimaryDark"
            android:contentDescription="@string/add_new_reservation" />

    </RelativeLayout>

</LinearLayout>