<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_clara"
            android:layout_width="256dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/clara_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_tv"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimaryDark" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lets_create_tv"
            android:layout_marginTop="10dp"
            android:text="Let's create your account!"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimaryDark"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name_input_layout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/full_name"
            app:boxBackgroundColor="?attr/colorPrimary"
            android:textColorHint="?attr/colorAccent"
            app:hintTextColor="?attr/colorAccent"
            app:boxStrokeColor="?attr/colorAccent"
            app:startIconDrawable="@drawable/fullname"
            app:startIconTint="?attr/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="?attr/colorSecondary"
                android:textCursorDrawable="@drawable/cursor_color"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nrp_input_layout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/nrp"
            app:boxBackgroundColor="?attr/colorPrimary"
            android:textColorHint="?attr/colorAccent"
            app:hintTextColor="?attr/colorAccent"
            app:boxStrokeColor="?attr/colorAccent"
            app:startIconDrawable="@drawable/nrp"
            app:startIconTint="?attr/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nrp_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="?attr/colorSecondary"
                android:textCursorDrawable="@drawable/cursor_color"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/grade_input_layout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/grade"
            app:boxBackgroundColor="?attr/colorPrimary"
            android:textColorHint="?attr/colorAccent"
            app:hintTextColor="?attr/colorAccent"
            app:boxStrokeColor="?attr/colorAccent"
            app:startIconDrawable="@drawable/grade"
            app:startIconTint="?attr/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/grade_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="?attr/colorSecondary"
                android:textCursorDrawable="@drawable/cursor_color"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            app:boxBackgroundColor="?attr/colorPrimary"
            android:textColorHint="?attr/colorAccent"
            app:hintTextColor="?attr/colorAccent"
            app:boxStrokeColor="?attr/colorAccent"
            app:startIconDrawable="@drawable/e_mail"
            app:startIconTint="?attr/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="?attr/colorSecondary"
                android:textCursorDrawable="@drawable/cursor_color"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            app:boxBackgroundColor="?attr/colorPrimary"
            android:textColorHint="?attr/colorAccent"
            app:hintTextColor="?attr/colorAccent"
            app:boxStrokeColor="?attr/colorAccent"
            app:startIconDrawable="@drawable/password"
            app:startIconTint="?attr/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="?attr/colorSecondary"
                android:textCursorDrawable="@drawable/cursor_color"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_input_layout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_password"
            app:boxBackgroundColor="?attr/colorPrimary"
            android:textColorHint="?attr/colorAccent"
            app:hintTextColor="?attr/colorAccent"
            app:boxStrokeColor="?attr/colorAccent"
            app:startIconDrawable="@drawable/password"
            app:startIconTint="?attr/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="?attr/colorSecondary"
                android:textCursorDrawable="@drawable/cursor_color"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/signup_btn"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/signin_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                android:text="@string/already_have_an_account"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimaryDark" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_signin"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="3dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimaryDark"
                android:text="@string/sign_in"
                android:focusable="true" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>

